# write_h264

./: README.md
Lesson_2_3_ReadAnnexB/: CMakeLists.txt
Lesson_2_3_ReadAnnexB/doc/: 手写H.264解码器.md
Lesson_2_3_ReadAnnexB/include/: AnnexBReader.hpp  Nalu.hpp
Lesson_2_3_ReadAnnexB/src/: Nalu.cpp  main.cpp
Lesson_2_4_EBSP_RBSP/: CMakeLists.txt
Lesson_2_4_EBSP_RBSP/include/: EBSP.hpp  Nalu.hpp  RBSP.hpp
Lesson_2_4_EBSP_RBSP/src/: EBSP.cpp  Nalu.cpp  RBSP.cpp  main.cpp
Lesson_3_5_SPS_PPS/: CMakeLists.txt
Lesson_3_5_SPS_PPS/include/: BitStream.hpp  EBSP.hpp  Nalu.hpp  NaluPPS.hpp  NaluSPS.hpp  RBSP.hpp
Lesson_3_5_SPS_PPS/resources/: sample_640x360_h264.h264
Lesson_3_5_SPS_PPS/src/: AnnexBReader.cpp  BitStream.cpp  EBSP.cpp  Nalu.cpp  NaluPPS.cpp  NaluSPS.cpp  RBSP.cpp  getWidth_and_Height.cpp  main.cpp
documents/: 手写H.264解码器.md  指数哥伦布编码.md  解析 SPS PPS 数据.md
